# numbsql

./: .coveragerc  .envrc  .flake8  .gitattributes  .gitignore  .prettierignore  .releaserc.js  .releaserc.json  .rgignore  .taplo.toml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  bors.toml  build.py  circle.yml  default.nix  flake.nix  mypy.ini  poetry-overrides.nix  pre-commit.nix  pyproject.toml  requirements.txt  setup.cfg  setup.py  shell.nix
.circleci/: config.yml
.github/: dependabot.yaml
.github/workflows/: auto-rebase.yml  ci.yml  codeql-analysis.yml  niv-updater.yml  publish.yaml  release.yml  update-deps.yaml  update-deps.yml
ci/release/: dry_run.sh  prepare.sh  publish.sh  run.sh  verify.sh
cysqlite3/: __init__.py  connection.pyx  cysqlite3.pyx  translation.py
dev/: lockfile_diff.sh
examples/: aggregate.py  scalar.py
nix/: default.nix  overlay.nix  pyproject-overrides.nix  sources.json  tests.nix
notebooks/: sqlite-window.ipynb
numbsql/: __init__.py  aggregate.py  exceptions.py  numbaext.py  scalar.py  sqlite.py
numbsql/tests/: conftest.py  test_aggregate.py  test_numbaext.py  test_ref_count_perf.py  test_scalar.py  test_version.py
patches/: bpo-44689-ctypes.util.find_library-now-finds-macOS-1.patch
slumba/: __init__.py  _version.py  aggregate.py  casting.py  cslumba.c  cslumba.cc  cslumba.cpp  cyslumba.pyx  exceptions.py  gen.py  miniast.py  numbaext.py  scalar.py  slumba.c  slumba.pyx  source.py  sqlite.py  sqlitenumba.py  tmp.py
slumba/examples/: aggregate.py  scalar.py
slumba/miniast/: __init__.py  base.py  py34.py  py35.py
slumba/pysqlite/: cache.h  connection.h
slumba/tests/: conftest.py  test_aggregate.py  test_cslumba.py  test_cyslumba.py  test_miniast.py  test_numbaext.py  test_scalar.py
