[tool.poetry]
name = "numbsql"
homepage = "https://github.com/cpcloud/numbsql"
repository = "https://github.com/cpcloud/numbsql"
version = "6.0.0"
description = "JITted SQLite user-defined scalar and aggregate functions"
readme = "README.md"
authors = ["Phillip Cloud <417981+cpcloud@users.noreply.github.com>"]
maintainers = ["Phillip Cloud <417981+cpcloud@users.noreply.github.com>"]
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4"
llvmlite = ">=0.36,<0.40"
numba = ">=0.53,<0.57"

[tool.poetry.dev-dependencies]
black = "^22"
flake8 = "^6"
pathspec = "^0.10.1"
ipykernel = "^6"
isort = "^5.9.3"
mypy = "^0.991"
pydocstyle = "^6.1.1"
pyupgrade = "^3"
pytest = "^7"
pytest-benchmark = "^4"
pytest-randomly = "^3.10.1"
pytest-xdist = "^3"
testbook = "^0.4.2"

[tool.pytest.ini_options]
xfail_strict = true
addopts = [
  "--ignore=site-packages",
  "--ignore=dist-packages",
  "--ignore=.direnv",
  "--ignore=examples",
  "--strict-markers",
  "--doctest-modules",
  "--benchmark-disable",
  "--durations=10",
]
norecursedirs = ["site-packages", "dist-packages", ".direnv", "examples"]

[tool.poetry2conda]
name = "numbsql"

[tool.isort]
line_length = 88
profile = "black"

[tool.pydocstyle]
convention = "numpy"
add_ignore = ["D105", "D213", "D203"]
match-dir = "numbsql"

[tool.mypy]
ignore_missing_imports = true
# untyped things
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
# Any handling
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = false
# None/Optional handling
no_implicit_optional = true
# show more context on failure
show_error_context = true
# show codes in case we end up needing to ignore
show_error_codes = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
