[project]
name = "numbsql"
version = "8.1.0"
requires-python = ">=3.10,<4"
description = "JITted SQLite user-defined scalar and aggregate functions"
readme = "README.md"
license = "Apache-2.0"
authors = [
  { name = "Phillip Cloud", email = "417981+cpcloud@users.noreply.github.com" },
]
maintainers = [
  { name = "Phillip Cloud", email = "417981+cpcloud@users.noreply.github.com" },
]
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = ["llvmlite>=0.36,<0.45", "numba>=0.53,<0.62"]

[project.urls]
Homepage = "https://github.com/cpcloud/numbsql"
Repository = "https://github.com/cpcloud/numbsql"
Issues = "https://github.com/cpcloud/numbsql/issues"

[dependency-groups]
dev = ["mypy>=1.1.1,<2", "packaging>=24.2", "ruff>=0.9,<1"]
tests = ["pytest>=8,<9", "pytest-benchmark>=5,<6", "pytest-randomly>=3.12,<4"]

[tool.ruff.lint]
ignore = ["E501"]

[tool.pytest.ini_options]
xfail_strict = true
addopts = [
  "--ignore=.direnv",
  "--ignore=examples",
  "--strict-markers",
  "--doctest-modules",
  "--benchmark-disable",
]
norecursedirs = [".direnv", "examples"]
filterwarnings = [
  "error",
  "ignore:Jupyter is migrating:DeprecationWarning",
  "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
]

[tool.mypy]
ignore_missing_imports = true
# untyped things
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
# Any handling
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = false
# None/Optional handling
no_implicit_optional = true
# show more context on failure
show_error_context = true
# show codes in case we end up needing to ignore
show_error_codes = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["numbsql"]

[tool.hatch.build.targets.sdist]
packages = ["numbsql"]
